Update app.js, footer, and styles

--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,5 @@
 <footer>
-    <p>Created by {{name}}<p>
+    {{!-- <p>Created by {{name}}<p> --}}
+    <p>© 2025 Weather App. All rights reserved.<p>
+        
 </footer>
