--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{> header}}
-        <p>{{message}}</p>
+        <b>{{message}}</b>
     </div>
 
     {{> footer}}
