--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
     <div class="main-content">
         {{> header}}
 
-        <p>Use this site to get your weather</p>
+        <b>Use this site to get your weather</b>
 
         <form>
             <input type="text" name="address" placeholder="Enter address" required>
